<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register2_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" >

        <TextView
            android:id="@+id/tv_fd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/colorOnPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pincode"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/pincode"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_pincode"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/confirm_pincode"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="horizontal"-->
<!--android:layout_marginTop="16dp"-->
<!--android:layout_marginHorizontal="16dp" >-->

<!--<com.google.android.material.textview.MaterialTextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="Account No: "-->
<!--    android:fontFamily="monospace"-->
<!--    android:textStyle="bold"-->
<!--    android:textSize="18sp"-->
<!--    android:textColor="@color/black"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginVertical="5dp" />-->

<!--<com.google.android.material.textview.MaterialTextView-->
<!--    android:id="@+id/tv_reg_acc"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="crn number"-->
<!--    android:fontFamily="monospace"-->
<!--    android:textSize="18sp"-->
<!--    android:textColor="@color/black"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginVertical="5dp"/>-->
<!--</LinearLayout>-->

<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="horizontal"-->
<!--android:layout_marginTop="8dp"-->
<!--android:layout_marginHorizontal="16dp" >-->

<!--<com.google.android.material.textview.MaterialTextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="CRN No: "-->
<!--    android:fontFamily="monospace"-->
<!--    android:textStyle="bold"-->
<!--    android:textSize="18sp"-->
<!--    android:textColor="@color/black"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginVertical="5dp" />-->

<!--<com.google.android.material.textview.MaterialTextView-->
<!--    android:id="@+id/tv_reg_crn"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="crn number"-->
<!--    android:fontFamily="monospace"-->
<!--    android:textSize="18sp"-->
<!--    android:textColor="@color/black"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginVertical="5dp"/>-->
<!--</LinearLayout>-->

<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="horizontal"-->
<!--android:layout_marginTop="16dp"-->
<!--android:layout_marginHorizontal="16dp" >-->

<!--<com.google.android.material.textview.MaterialTextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="IFSC Code: "-->
<!--    android:fontFamily="monospace"-->
<!--    android:textStyle="bold"-->
<!--    android:textSize="18sp"-->
<!--    android:textColor="@color/black"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginVertical="5dp" />-->

<!--<com.google.android.material.textview.MaterialTextView-->
<!--    android:id="@+id/tv_reg_ifsc"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="crn number"-->
<!--    android:fontFamily="monospace"-->
<!--    android:textSize="18sp"-->
<!--    android:textColor="@color/black"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginVertical="5dp"/>-->
<!--</LinearLayout>-->